make go-project /api/items/all endpoint paginated and add refactor endpoint test
